<resources>
    <string name="app_name">nhom_7</string>
    <string name="title_activity_trang_chu">TrangChu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="hienmatkhau">Hiện mật khẩu</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="nhaphoten">Nhập họ tên</string>
    <string name="nhapemail">Nhập email</string>
    <string name="nhapmatkhau">Nhập mật khẩu</string>
    <string name="xacnhanmatkhau">Xác nhận mật khẩu</string>
    <string name="nhapsodienthoai">Nhập số điện thoại</string>
    <string name="nhapdiachi">Nhập địa chỉ</string>
    <string name="dangki">ĐĂNG KÍ</string>
    <string name="huy">Hủy</string>
    <string name="gui">Gửi</string>
    <string name="loinhan">Chúng tôi sẽ gửi link đổi mật khẩu vào Email của bạn.</string>
    <string name="nhapmail">Nhập email</string>
    <string name="email">Email</string>

    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="manage">Manage</string>
    <string name="info">Info</string>
    <string name="thaydoithongtin">Thay đổi thông tin</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
    <string name="lichsudonhang">Lịch sử đơn hàng</string>
    <string name="dangxuat">Đăng xuất</string>

    <string name="hoten">Họ tên : </string>
    <string name="sodienthoai">Số điện thoại : </string>
    <string name="diachi">Địa chỉ : </string>
    <string name="luu">Lưu</string>
    <string name="thaydoi">Thay đổi</string>

    <string name="matkhaucu">Mật khẩu hiện tại</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="xacnhanmkmoi">Xác nhận mật khẩu mới</string>

    <string name="nhapmkcu">Nhập mật khẩu cũ</string>
    <string name="nhapmkmoi">Nhập mật khẩu mới</string>
    <string name="nhapmkxacnhan">Nhập lại mật khẩu mới</string>

    <string name="quanlynhanvien">Quản lý nhân viên</string>
    <string name="themnhanvien">Thêm nhân viên</string>


    <string name="QuanLiDonHang">Quản lí đơn hàng</string>
    <string name="LichSuDonHang">Lịch sử đơn hàng</string>
    <string name="SanPham1">Sản phẩm 1</string>
    <string name="Gia">3.000.000đ</string>
    <string name="SoLuong">Số lượng:</string>
    <string name="so3">3</string>
    <string name="Size">size:</string>
    <string name="S">S</string>
    <string name="Ma">Mã</string>
    <string name="ma">-Mo9MH4UIfhojzoid5EC</string>
    <string name="NgayDat">Ngày đặt:</string>
    <string name="Ngaydat">2/7/2021</string>
    <string name="TrangThai">Trạng thái:</string>
    <string name="Cho">Chờ</string>
    <string name="Tong">Tổng:</string>
    <string name="Huy">Huỷ</string>
    <string name="DaNhan">Đã nhận</string>
    <string name="XacNhan">Xác Nhận</string>
    <string name="Ten">Nguyễn Văn A</string>
    <string name="HoTen">Họ tên</string>
    <string name="email">Email:</string>
    <string name="Email">nguyenvana@gmail.com</string>
    <string name="SDT">Số điện thoại:</string>
    <string name="sdt">0877685424</string>
    <string name="DiaChi">Địa chỉ:</string>
    <string name="Diachi">Hẻm 48, Bùi Thị Xuân, Quận 5, Tp. Hồ Chí Minh</string>
</resources>