<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoiMatKhau">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/doimatkhau"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matkhaucu"/>
        <EditText
            android:id="@+id/edMatKhauCu"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nhapmkcu"
            android:paddingLeft="20dp"
            android:background="@drawable/boder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/matkhaumoi"/>
        <EditText
            android:id="@+id/edMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:hint="@string/nhapmkmoi"
            android:background="@drawable/boder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/xacnhanmkmoi"/>
        <EditText
            android:id="@+id/edXacNhanMKMoi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:hint="@string/xacnhanmatkhau"
            android:background="@drawable/boder"/>
        <Button
            android:id="@+id/btnThayDoi"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/thaydoi"/>
    </LinearLayout>

</LinearLayout>