<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edHoTen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nhaphoten"
            android:paddingLeft="20dp"
            android:background="@drawable/boder"/>
        <EditText
            android:id="@+id/edNhapEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:hint="@string/nhapemail"
            android:background="@drawable/boder"/>
        <EditText
            android:id="@+id/edNhapMK"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:hint="@string/nhapmatkhau"
            android:background="@drawable/boder"/>
        <EditText
            android:id="@+id/edXacNhanMK"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:hint="@string/xacnhanmatkhau"
            android:background="@drawable/boder"/>
        <EditText
            android:id="@+id/edSoDienThoai"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:hint="@string/nhapsodienthoai"
            android:background="@drawable/boder"/>
        <EditText
            android:id="@+id/edDiaChi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:hint="@string/nhapdiachi"
            android:background="@drawable/boder"/>
        <Button
            android:id="@+id/btnDangKi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/dangki"/>
    </LinearLayout>

</LinearLayout>