<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/user"/>
    <TextView
        android:id="@+id/tvTenUser"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/tendangnhap"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/btnThayDoiInfo"
            android:text="@string/thaydoithongtin"
            style="@style/buttonUser"/>
        <Button
            android:id="@+id/btnDoiMatKhau"
            android:text="@string/doimatkhau"
            style="@style/buttonUser"/>
        <Button
            android:id="@+id/btnDangXuat"
            android:text="@string/dangxuat"
            style="@style/buttonUser"/>
    </LinearLayout>


</LinearLayout>