<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quenmatkhau"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loinhan"

        android:textSize="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nhapmail"
        android:textSize="15dp"/>
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/boder"
        android:hint="@string/"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:textColor="@color/black"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btnGui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui"
            android:textColor="@color/black"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


</LinearLayout>